master: fix spacing

--- a/src/styles/common/utils.less
+++ b/src/styles/common/utils.less
@@ -154,6 +154,10 @@
     &-double {
       padding-top: @spacing-double !important;
     }
+
+    &-65 {
+      padding-top: 65px;
+    }
   }
 
   &__section {
